기업 기능  대부분

--- a/src/main/resources/templates/comp/postingList.mustache
+++ b/src/main/resources/templates/comp/postingList.mustache
@@ -12,8 +12,8 @@
 
 
 			{{#postingList}}
-			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<a href="javascript:void(0);" class="btn btn-info col-5" onclick="openNewWindow('/comp/posting/newWindow/{{id}}')">
+			<div class="d-flex border border-info m-3 mt-4 p-2 justify-content-between bg-info">
+				<a href="javascript:void(0);" class="btn btn-light col-5" onclick="openNewWindow('/comp/posting/newWindow/{{id}}')">
 					<div class="">
 						<div class="fw-bold">{{title}}</div>
 						<span class="badge bg-secondary">{{position}}</span>
