--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -81,7 +81,7 @@
 								</li>
 								<li class="nav-item">
 									{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/applyList">지원내역</a>{{/sessionComp.compname}}
-									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/recommend">인재추천</a>{{/sessionComp.compname}}
+									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/recommend">인재찾기</a>{{/sessionComp.compname}}
 								</li>
 								<li class="nav-item">
 									<a class="nav-link text-white" href="/master/help">고객센터</a>
