--- a/src/main/resources/templates/comp/resumeList.mustache
+++ b/src/main/resources/templates/comp/resumeList.mustache
@@ -5,7 +5,7 @@
 
 
 
-		<div class="col-9 ms-2">
+		<div class="col-9 m-auto">
 			<h1 class=" text-center mt-2 mb-2">지원자 내역</h1>
 
 
@@ -34,7 +34,7 @@
 			
 
 
-			<table class="table table-bordered ms-3">
+			<table class="table table-bordered">
 				<thead>
 				  <tr class="table-secondary">
 					<th class="text-center" scope="col">No.</th>
