--- a/src/main/resources/templates/comp/bookmarkList.mustache
+++ b/src/main/resources/templates/comp/bookmarkList.mustache
@@ -3,7 +3,7 @@
 
 <!-- 23번 -->
 
-<div class="col-9 ms-3">
+<div class="col-9 m-auto">
 	<h1 class="text-center mt-2">이력서 북마크</h1>
 
 	{{#resumeList}}
@@ -40,7 +40,7 @@
 		</div>
 		<div class="d-flex flex-column justify-content-around col-auto">
 			<a href="javascript:void(0);" class="btn btn-success btn-sm" onclick="openNewWindow('/resume/newWindow/{{id}}')">자세히 보기</a>
-			<a href="" class="btn btn-primary btn-sm">연락하기</a>
+			<a href="" class="btn btn-primary btn-sm">입사 제안</a>
 			<form action="/comp/bookmarkList/delete" method="post">
 				<input type="hidden" name="hiddenResumeId" value="{{id}}">
 				<input class="btn btn-danger btn-sm w-100" type="submit" value="북마크 삭제">
