북마크삭제버튼구현

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -120,8 +120,8 @@
 				joinLink.textContent = "로그아웃";
 				joinLink.href = "/logout";
 
-				// loginLink.textContent = "마이페이지";
-				// loginLink.href = "/user/updateForm";
+				loginLink.textContent = "마이페이지";
+				 loginLink.href = "/user/updateForm";
 			} else {
 				joinLink.textContent = "회원가입";
 				joinLink.href = "/selectJoinForm";
