--- a/src/main/resources/templates/user/bookmarkForm.mustache
+++ b/src/main/resources/templates/user/bookmarkForm.mustache
@@ -47,5 +47,26 @@
 		</div>
 	</div>
 </div>
+<script>
+	// 삭제 버튼 클릭 이벤트 핸들러
+	document.addEventListener("click", function (e) {
+	  if (e.target && e.target.classList.contains("btn-danger")) {
+		// 클릭한 버튼이 삭제 버튼인 경우
+		if (confirm("삭제하시겠습니까?")) {
+		  // 사용자가 확인을 클릭한 경우
+		  // 해당 아이템을 삭제하는 코드 추가
+  
+		  // 예: 삭제 버튼이 속한 상위 요소를 찾아서 제거
+		  var itemToRemove = e.target.closest(".d-flex.border.border-info.m-3.p-2");
+		  if (itemToRemove) {
+			itemToRemove.remove(); // 해당 아이템을 삭제
+		  }
+		} else {
+		  // 사용자가 취소를 클릭한 경우
+		  // 아무 동작하지 않음
+		}
+	  }
+	});
+  </script>
 
 {{> layout/footer}}
