--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -16,22 +16,50 @@
 	/>
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
-    {{^sessionComp}}<style></style>{{/sessionComp}}
+	{{^sessionComp}}
+		<style></style>{{/sessionComp}}
 
-    {{#sessionComp}}{{^sessionComp.compname}}<style>
-      .bg-info{ background-color: pink !important; }
-      .border-info{ border-color: pink !important; }
-      .btn-info{ border-color: pink; background-color: pink !important; }
-      .btn-info:hover { border-color: pink !important; }
-    </style>{{/sessionComp.compname}}{{/sessionComp}}
+	{{#sessionComp}}{{^sessionComp.compname}}
+		<style>
+			.bg-info {
+				background-color: pink !important;
+			}
 
-    {{#sessionComp.compname}}<style>
-      .bg-info{ background-color: silver !important; }
-      .border-info{ border-color: silver !important; }
-      .btn-info{ border-color: silver; background-color: silver !important; }
-      .btn-info:hover { border-color: silver !important; }
-    </style>{{/sessionComp.compname}}
-  </head>
+			.border-info {
+				border-color: pink !important;
+			}
+
+			.btn-info {
+				border-color: pink;
+				background-color: pink !important;
+			}
+
+			.btn-info:hover {
+				border-color: pink !important;
+			}
+		</style>{{/sessionComp.compname}}{{/sessionComp}}
+
+	{{#sessionComp.compname}}
+		<style>
+			.bg-info {
+				background-color: silver !important;
+			}
+
+			.border-info {
+				border-color: silver !important;
+			}
+
+			.btn-info {
+				border-color: silver;
+				background-color: silver !important;
+			}
+
+			.btn-info:hover {
+				border-color: silver !important;
+			}
+		</style>
+	{{/sessionComp.compname}}
+</head>
 
 <body class="d-flex flex-column min-vh-100">
 	<header>
@@ -48,63 +76,70 @@
 				<div class="col-4 d-flex justify-content-end">
 					<a class="btn btn-white fw-bold align-self-center" href="/selectJoinForm">회원가입</a>
 					{{^sessionComp.compname}}<a class="btn btn-white fw-bold align-self-center" href="/user/loginForm">로그인</a>{{/sessionComp.compname}}
-					{{#sessionComp}}<a class="btn btn-white fw-bold align-self-center" href="/comp/main">내 회사 정보</a>{{/sessionComp}}
+					{{#sessionComp}}
+						<a class="btn btn-white fw-bold align-self-center" href="/comp/main">내 회사 정보</a>{{/sessionComp}}
 				</div>
 			</div>
 		</div>
 
 		<nav class="navbar navbar-expand-sm navbar-dark bg-info mb-3 p-1 d-flex justify-content-center">
-				<div class="col-xxl-7 col-xl-9 col-lg-10 col-md-11 col-sm-12 d-flex justify-content-between">
+			<div class="col-xxl-7 col-xl-9 col-lg-10 col-md-11 col-sm-12 d-flex justify-content-between">
 
-					<div class="m-1">
-						<a href="/">
-							<img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="90px"/>
-						</a>
-					</div>
-
-					<div class="container-fluid align-self-center">
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-							<span class="navbar-toggler-icon"></span>
-						</button>
-						<div class="collapse navbar-collapse" id="mynavbar">
-							<ul class="navbar-nav me-auto">
-								<li class="nav-item">
-									<a class="nav-link text-white" href="/">채용정보</a>
-								</li>
-								<li class="nav-item">
-									{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/resumeForm">이력서등록</a>{{/sessionComp.compname}}
-									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/posting/saveForm">채용공고등록</a>{{/sessionComp.compname}}
-								</li>
-								<li class="nav-item">
-									{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/resumeManage">이력서관리</a>{{/sessionComp.compname}}
-									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/{{sessionComp.userId}}/postingList">채용공고관리</a>{{/sessionComp.compname}}
-								</li>
-								<li class="nav-item">
-									{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/applyList">지원내역</a>{{/sessionComp.compname}}
-									{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/recommend">인재찾기</a>{{/sessionComp.compname}}
-								</li>
-								<li class="nav-item">
-									<a class="nav-link text-white" href="/master/help">고객센터</a>
-								</li>
-								<li class="nav-item">
-									{{#sessionComp}}{{^sessionComp.compname}}<a class="nav-link text-black fw-bold" href="/master/help">관리자전용</a>{{/sessionComp.compname}}{{/sessionComp}}
-								</li>
-							</ul>
-						</div>
-					</div>
-			
-					<div class="col-auto align-self-center me-1">
-						<form class="d-flex">
-							<div class="me-1 w-75">
-								<input class="form-control" type="text" placeholder="검색어를 입력하세요."/>
-							</div>
-							<div class="">
-								<button class="btn btn-secondary" type="button">검색</button>
-							</div>
-						</form>
-					</div>
-
+				<div class="m-1">
+					<a href="/">
+						<img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="90px"/>
+					</a>
 				</div>
+
+				<div class="container-fluid align-self-center">
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="mynavbar">
+						<ul class="navbar-nav me-auto">
+							<li class="nav-item">
+								<a class="nav-link text-white" href="/">채용정보</a>
+							</li>
+							<li class="nav-item">
+								{{^sessionComp.compname}}<a class="nav-link text-white"
+								                            href="/user/resumeForm">이력서등록</a>{{/sessionComp.compname}}
+								{{#sessionComp.compname}}<a class="nav-link text-white" href="/comp/posting/saveForm">채용공고등록</a>{{/sessionComp.compname}}
+							</li>
+							<li class="nav-item">
+								{{^sessionComp.compname}}<a class="nav-link text-white"
+								                            href="/user/resumeManage">이력서관리</a>{{/sessionComp.compname}}
+								{{#sessionComp.compname}}
+									<a class="nav-link text-white" href="/comp/{{sessionComp.userId}}/postingList">채용공고관리</a>{{/sessionComp.compname}}
+							</li>
+							<li class="nav-item">
+								{{^sessionComp.compname}}<a class="nav-link text-white"
+								                            href="/user/applyList">지원내역</a>{{/sessionComp.compname}}
+								{{#sessionComp.compname}}<a class="nav-link text-white"
+								                            href="/comp/recommend">인재찾기</a>{{/sessionComp.compname}}
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-white" href="/master/help">고객센터</a>
+							</li>
+							<li class="nav-item">
+								{{#sessionComp}}{{^sessionComp.compname}}<a class="nav-link text-black fw-bold"
+								                                            href="/master/help">관리자전용</a>{{/sessionComp.compname}}{{/sessionComp}}
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-auto align-self-center me-1">
+					<form class="d-flex">
+						<div class="me-1 w-75">
+							<input class="form-control" type="text" placeholder="검색어를 입력하세요."/>
+						</div>
+						<div class="">
+							<button class="btn btn-secondary" type="button">검색</button>
+						</div>
+					</form>
+				</div>
+
+			</div>
 		</nav>
 	</header>
 
