--- a/src/main/resources/templates/comp/resumeDetail.mustache
+++ b/src/main/resources/templates/comp/resumeDetail.mustache
@@ -1,82 +1,124 @@
 {{> layout/header}}
 <!-- 25번 -->
 
+<div class="col-auto container border border-info mb-2">
+  <h1 class="text-center mt-2">이력서 상세보기</h1>
 
+  <div class="d-flex">
+    <div
+      class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto"
+      style="width: 167px; height: 165px"
+    >
+      <img
+        src="../../../images/{{ resume.user.photo }}"
+        class="img-fluid rounded-circle"
+      />
+    </div>
 
+    <div class="col-8 p-2">
+      <div class="input-group mb-3">
+        <span class="input-group-text">이름</span>
+        <input
+          type="text"
+          class="form-control"
+          value="{{#resume.user.username}}{{
+            resume.user.username
+          }}{{/resume.user.username}}"
+          disabled
+        />
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text">전화번호</span>
+        <input
+          type="text"
+          class="form-control"
+          value="{{#resume.user.tel}}{{ resume.user.tel }}{{/resume.user.tel}}"
+          disabled
+        />
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text">주소</span>
+        <textarea class="form-control" rows="2" disabled
+          >{{#resume.user.address}}{{ resume.user.address
+          }}{{/resume.user.address}}</textarea
+        >
+      </div>
+      <div class="input-group mb-2">
+        <span class="input-group-text">생년월일</span>
+        <input
+          type="text"
+          class="form-control"
+          value="{{#resume.user.birth}}{{
+            resume.user.birth
+          }}{{/resume.user.birth}}"
+          disabled
+        />
+      </div>
+    </div>
+  </div>
 
-		<div class="col-auto container border border-info mb-2">
-			<h1 class="text-center mt-2">이력서 상세보기</h1>
+  <div class="input-group mb-3">
+    <span class="input-group-text">학력사항</span>
+    <input
+      type="text"
+      class="form-control"
+      value="{{ resume.grade }}"
+      disabled
+    />
+  </div>
 
-			<div class="d-flex">
-				<div class="m-1 col-4 d-flex flex-column img-fluid d-block m-auto" style="width:167px; height:165px;">
-					<img src="../../../images/{{resume.user.photo}}" class="img-fluid rounded-circle"/>
-				</div>
+  <div class="input-group mb-3">
+    <span class="input-group-text">경력사항</span>
+    <input
+      type="text"
+      class="form-control"
+      value="{{ resume.career }}"
+      disabled
+    />
+  </div>
 
-				<div class="col-8 p-2">
-					<div class="input-group mb-3">
-						<span class="input-group-text">이름</span>
-						<input type="text" class="form-control" value="{{#resume.user.username}}{{resume.user.username}}{{/resume.user.username}}" disabled>
-					</div>
-					<div class="input-group mb-3">
-						<span class="input-group-text">전화번호</span>
-						<input type="text" class="form-control" value="{{#resume.user.tel}}{{resume.user.tel}}{{/resume.user.tel}}" disabled>
-					</div>
-					<div class="input-group mb-3">
-						<span class="input-group-text">주소</span>
-						<textarea class="form-control" rows="2" disabled>{{#resume.user.address}}{{resume.user.address}}{{/resume.user.address}}</textarea>
-					</div>
-					<div class="input-group mb-2">
-						<span class="input-group-text">생년월일</span>
-						<input type="text" class="form-control" value="{{#resume.user.birth}}{{resume.user.birth}}{{/resume.user.birth}}" disabled>
-					</div>
-				</div>
+  <div class="input-group mb-3">
+    <span class="input-group-text">보유기술</span>
+    <input
+      type="text"
+      class="form-control comma"
+      value="{{#resume.user.userSkillList}}{{
+        skill.skillname
+      }}, {{/resume.user.userSkillList}}"
+      disabled
+    />
+  </div>
 
-			</div>
+  <div class="input-group mb-3">
+    <span class="input-group-text">제목</span>
+    <input
+      type="text"
+      class="form-control"
+      value="{{ resume.title }}"
+      disabled
+    />
+  </div>
 
-			<div class="input-group mb-3">
-				<span class="input-group-text">학력사항</span>
-				<input type="text" class="form-control" value="{{resume.grade}}" disabled>
-			</div>
+  <div class="input-group mb-3">
+    <span class="input-group-text">내용</span>
+    <textarea class="form-control" rows="5" disabled>{{
+      resume.personalStatement
+    }}</textarea>
+  </div>
 
-			<div class="input-group mb-3">
-				<span class="input-group-text">경력사항</span>
-				<input type="text" class="form-control" value="{{resume.career}}" disabled>
-			</div>
+  <div class="d-flex justify-content-center">
+    <button type="button" class="mb-3 w-100 btn btn-success">입사 제안</button>
+    <button type="button" class="mb-3 ms-3 w-100 btn btn-warning">
+      북마크
+    </button>
+  </div>
+</div>
 
-			<div class="input-group mb-3">
-				<span class="input-group-text">보유기술</span>
-				<input type="text" class="form-control comma" value="{{#resume.user.userSkillList}}{{skill.skillname}}, {{/resume.user.userSkillList}}" disabled>
-			</div>
+<script>
+  let comma = document.querySelector(".comma");
+  console.log(comma.value);
+  comma.value = comma.value.slice(0, -2);
+  console.log(comma.value);
+</script>
 
-			<div class="input-group mb-3">
-				<span class="input-group-text">제목</span>
-				<input type="text" class="form-control" value="{{resume.title}}" disabled>
-			</div>
-
-			<div class="input-group mb-3">
-				<span class="input-group-text">내용</span>
-				<textarea class="form-control" rows="5" disabled>{{resume.personalStatement}}</textarea>
-			</div>
-
-
-			<div class="d-flex justify-content-center">
-				<button type="button" class="mb-3 w-100 btn btn-success">입사 제안</button>
-				<button type="button" class="mb-3 ms-3 w-100 btn btn-warning">북마크</button>
-			</div>
-
-		</div>
-
-
-		<script>
-			
-			let comma = document.querySelector(".comma");
-			console.log(comma.value);
-			comma.value = comma.value.slice(0, -2);
-			console.log(comma.value);
-
-
-		</script>
-
-
-		
 {{> layout/footer}}
