이력서 관리하기 페이지 및 이력서 수정 체크박스, 이력서 공개여부

--- a/src/main/resources/templates/user/resumeUpdateForm.mustache
+++ b/src/main/resources/templates/user/resumeUpdateForm.mustache
@@ -22,7 +22,7 @@
     </div>
     <div class="col-9 ms-3">
       <h1 class="text-center mt-2">이력서 수정</h1>
-      <form action="/resume/{{ id }}/update" method="post">
+      <form action="/resume/{{ resume.id }}/update" method="post">
         <div class="d-flex">
           <div class="m-2 col-4 d-flex flex-column align-items-center">
             <img
