--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -46,8 +46,12 @@
 				</div>
 
 				<div class="col-4 d-flex justify-content-end">
-					<a class="btn btn-white fw-bold align-self-center" href="/selectJoinForm">회원가입</a>
-					{{^sessionComp.compname}}<a class="btn btn-white fw-bold align-self-center" href="/user/loginForm">로그인</a>{{/sessionComp.compname}}
+					{{^sessionAllUser}}<a class="btn btn-white fw-bold align-self-center" href="/selectJoinForm">회원가입</a>{{/sessionAllUser}}
+					{{^sessionAllUser}}<a class="btn btn-white fw-bold align-self-center" href="/user/loginForm">로그인</a>{{/sessionAllUser}}
+					
+					{{#sessionAllUser}}<a class="btn btn-white fw-bold align-self-center" href="/logout">로그아웃</a>{{/sessionAllUser}}
+
+					{{#sessionUser}}<a class="btn btn-white fw-bold align-self-center" href="/user/updateForm">마이페이지</a>{{/sessionUser}}
 					{{#sessionComp}}<a class="btn btn-white fw-bold align-self-center" href="/comp/main">내 회사 정보</a>{{/sessionComp}}
 				</div>
 			</div>
@@ -131,16 +135,16 @@
 			}
 		}
 
-		// 페이지 로드 시 초기 세션 상태에 따라 링크 텍스트 변경
-		document.addEventListener("DOMContentLoaded", function () {
-			changeLoginLinks();
-		});
+		// // 페이지 로드 시 초기 세션 상태에 따라 링크 텍스트 변경
+		// document.addEventListener("DOMContentLoaded", function () {
+		// 	changeLoginLinks();
+		// });
 
-		// 로그인 버튼 클릭 시 세션 상태에 따라 링크 텍스트 변경
-		let loginButton = document.querySelector("#button");
-		if (loginButton) {
-			loginButton.addEventListener("click", function () {
-				setTimeout(changeLoginLinks, 1000); // 로그인 처리 후 잠시 후에 변경 적용
-			});
-		}
+		// // 로그인 버튼 클릭 시 세션 상태에 따라 링크 텍스트 변경
+		// let loginButton = document.querySelector("#button");
+		// if (loginButton) {
+		// 	loginButton.addEventListener("click", function () {
+		// 		setTimeout(changeLoginLinks, 1000); // 로그인 처리 후 잠시 후에 변경 적용
+		// 	});
+		// }
 	</script>
