--- a/src/main/resources/templates/user/resumeUpdateForm.mustache
+++ b/src/main/resources/templates/user/resumeUpdateForm.mustache
@@ -22,88 +22,49 @@
     </div>
     <div class="col-9 ms-3">
       <h1 class="text-center mt-2">이력서 수정</h1>
-      <form action="/resume/{{ resume.id }}/update" method="post">
+      <form action="/resume/{{ resume.id }}/update" method="post" enctype="multipart/form-data">
         <div class="d-flex">
           <div class="m-2 col-4 d-flex flex-column align-items-center">
-            <img
-              src="../../../images/basic.jpg"
-              class="img-fluid rounded-circle"
-              style="width: 150px; height: 150px"
-            />
+            <img id="preview" src="../../../../../images/{{resume.user.photo}}" class="circle_avatar"
+              style="width:150px; height:150px;" />
+            <div class="input-group mb-3 mt-3">
+              <input type="file" class="form-control" placeholder="Enter pto" name="pto" onchange="changePic(event)">
+            </div>
           </div>
 
           <div class="col-8 p-2">
             <div class="input-group mb-3">
-              <span class="input-group-text"
-                ><span class="ms-2 me-4">이름</span></span
-              >
-              <input
-                type="text"
-                class="form-control"
-                name="username"
-                value="{{ resume.user.username }}"
-              />
+              <span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
+              <input type="text" class="form-control" name="username" value="{{ resume.user.username }}" />
             </div>
             <div class="input-group mb-3">
               <span class="input-group-text">전화번호</span>
-              <input
-                type="tel"
-                class="form-control"
-                name="tel"
-                value="{{ resume.user.tel }}"
-              />
+              <input type="tel" class="form-control" name="tel" value="{{ resume.user.tel }}" />
             </div>
             <div class="input-group mb-3">
-              <span class="input-group-text"
-                ><span class="ms-2 me-4">주소</span></span
-              >
-              <input
-                type="text"
-                class="form-control"
-                name="address"
-                value="{{ resume.user.address }}"
-              />
+              <span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
+              <input type="text" class="form-control" name="address" value="{{ resume.user.address }}" />
             </div>
             <div class="input-group mb-3">
               <span class="input-group-text">생년월일</span>
-              <input
-                type="date"
-                class="form-control"
-                name="birth"
-                value="{{ resume.user.birth }}"
-              />
+              <input type="date" class="form-control" name="birth" value="{{ resume.user.birth }}" />
             </div>
           </div>
         </div>
 
         <div class="input-group ms-2 mb-3">
           <span class="input-group-text">이력서 제목</span>
-          <input
-            type="text"
-            class="form-control"
-            name="title"
-            value="{{ resume.title }}"
-          />
+          <input type="text" class="form-control" name="title" value="{{ resume.title }}" />
         </div>
 
         <div class="input-group ms-2 mb-3">
           <span class="input-group-text">학력사항</span>
-          <input
-            type="text"
-            class="form-control"
-            name="grade"
-            value="{{ resume.grade }}"
-          />
+          <input type="text" class="form-control" name="grade" value="{{ resume.grade }}" />
         </div>
 
         <div class="input-group ms-2 mb-3">
           <span class="input-group-text" center>경력사항</span>
-          <input
-            type="text"
-            class="form-control"
-            name="career"
-            value="{{ resume.career }}"
-          />
+          <input type="text" class="form-control" name="career" value="{{ resume.career }}" />
         </div>
 
         <div class="card input-group ms-2 mb-3">
@@ -111,13 +72,7 @@
           <div class="d-flex flex-wrap">
             {{#skillList}}
             <div class="form-check d-inline-block ms-3 me-2">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                id="skill{{ id }}"
-                value="{{ id }}"
-                name="skillList"
-              />
+              <input class="form-check-input" type="checkbox" id="skill{{ id }}" value="{{ id }}" name="skillList" />
               <label class="form-check-label">{{ skillname }}</label>
             </div>
             {{/skillList}}
@@ -126,17 +81,11 @@
 
         <div class="input-group ms-2 mb-3">
           <span class="input-group-text">자기소개서</span>
-          <textarea
-            class="form-control"
-            rows="5"
-            name="personalStatement"
-            value="{{ resume.personalStatement }}"
-            >{{ resume.personalStatement }}</textarea
-          >
+          <textarea class="form-control" rows="5" name="personalStatement">{{ resume.personalStatement }}</textarea>
         </div>
 
-        <input type="checkbox" name="cb" value="true"
-        {{ #resume.disclosure }} checked {{ /resume.disclosure }} /> 이력서 공개
+        <input type="checkbox" name="cb" value="true" {{ #resume.disclosure }} checked {{ /resume.disclosure }} /> 이력서
+        공개
         여부
         <br />
         <!-- disabled속성은 입력할 수 없는 input태그를 만든다 -->
@@ -145,12 +94,7 @@
         <!-- disabled ="ture"가 생략 된것-->
 
         <div>
-          <input
-            id="button"
-            class="btn btn-primary m-2 mb-3 w-100"
-            type="submit"
-            value="이력서 수정"
-          />
+          <input id="button" class="btn btn-primary m-2 mb-3 w-100" type="submit" value="이력서 수정" />
         </div>
       </form>
     </div>
@@ -180,5 +124,21 @@
   }
 
   boxSelect();
+
+
+  function changePic(e1) {
+    console.log(e1);
+    let f = e1.srcElement.files[0];
+    if (!f.type.match("image.*")) {
+      alert("이미지를 등록해주세요.");
+      return;
+    }
+    let reader = new FileReader(); //버퍼를 하나 만듦 ,메모리에 끌어 올릴려고!
+    reader.onload = function (e2) { // 파일이 다 읽어지면 콜백됨
+      let previewEl = document.querySelector("#preview");
+      previewEl.setAttribute("src", e2.target.result);
+    }
+    reader.readAsDataURL(f); // 파일 읽기, 버퍼로 다 읽으면 onload() 발동 -> 파일 다 읽으면 콜백
+  }
 </script>
 {{> layout/footer}}
