--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -4,36 +4,35 @@
 <div class="d-flex mb-3">
 
 	<div class="col-2"></div>
-
 	<div class="class col-8 h-auto d-flex border border-info">
 		<div class="bg-info col-2">
 			<div class="m-2"></div>
-			<a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
+			<a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="resumeForm" class="w-100 btn btn-info">이력서 등록</a>
+			<a href="/user/resumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="resumeManage" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="/user/resumeManage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
-			<a href="applyList" class="w-100 btn btn-info">지원내역</a>
+			<a href="/user/applyList" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href="bookmarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="recommendForm" class="w-100 btn btn-info">기업추천</a>
+			<a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
-
-
 		<div class="col-9 ms-3">
 			<h1 class="text-center mt-2">마이페이지</h1>
 
-			<div class="d-flex">
-				<div class="m-2 col-4 d-flex flex-column align-items-center">
-					<img id="preview" src="../../../../../images/{{user.photo}}" class="circle_avatar"
-					     style="width:150px; height:150px;"/>
-
-				</div>
-
-				<form action="/user/update" method="post" enctype="multipart/form-data">
+			<form action="/user/update" method="post" enctype="multipart/form-data">
+				<div class="d-flex">
+					<div class="m-2 col-4 d-flex flex-column align-items-center">
+						<img id="preview" src="../../../../../images/{{user.photo}}" class="img-fluid rounded-circle"
+							style="width:150px; height:150px;" />
+						<div class="input-group mb-3 mt-1">
+							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
+								onchange="changePic(event)">
+						</div>
+					</div>
 
 					<div>
 						<div class="input-group col-6 mb-3">
@@ -52,38 +51,26 @@
 							<span class="input-group-text">생년월일</span>
 							<input type="date" class="form-control" value="{{user.birth}}" name="birth">
 						</div>
-						<div class="input-group mb-3">
-							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
-							       onchange="changePic(event)">
-						</div>
 					</div>
-					<div>
-						<input id="button" class=" btn btn-primary m-2 mb-3 w-100" type="submit" value="수정">
-					</div>
-				</form>
 
-
-			</div>
-
-
+				</div>
+				<div>
+					<input id="button" class=" btn btn-primary m-2 mb-3 w-100" type="submit" value="수정">
+				</div>
+			</form>
 		</div>
 
 	</div>
-
 </div>
 </div>
-
-
 <script>
 	function changePic(e1) {
 		console.log(e1);
 		let f = e1.srcElement.files[0];
-
 		if (!f.type.match("image.*")) {
 			alert("이미지를 등록해주세요.");
 			return;
 		}
-
 		let reader = new FileReader(); //버퍼를 하나 만듦 ,메모리에 끌어 올릴려고!
 		reader.onload = function (e2) { // 파일이 다 읽어지면 콜백됨
 			let previewEl = document.querySelector("#preview");
