--- a/src/main/resources/templates/user/applyList.mustache
+++ b/src/main/resources/templates/user/applyList.mustache
@@ -62,17 +62,15 @@
 						<th>상태</th>
 					</tr>
 				</thead>
-
 				<tbody>
 					{{#applyList}}
-						<tr>
-							<td>{{ id }}</td>
-							<td class="clickable" data-type="posting"
-							    data-id="{{ posting.id }}">{{ posting.title }}</td>
-							<td class="clickable" data-type="resume" data-id="{{ resume.id }}">{{ resume.title }}</td>
-							<td>{{ posting.position }}</td>
-							<td>{{ statement }}</td>
-						</tr>
+					<tr>
+						<td>{{ id }}</td>
+						<td class="clickable" data-type="posting" data-id="{{ posting.id }}">{{ posting.title }}</td>
+						<td class="clickable" data-type="resume" data-id="{{ resume.id }}">{{ resume.title }}</td>
+						<td>{{ posting.position }}</td>
+						<td>{{ statement }}</td>
+					</tr>
 					{{/applyList}}
 				</tbody>
 			</table>
@@ -80,8 +78,6 @@
 	</div>
 	<div class="col-2"></div>
 </div>
-
-
 <script>
 	// 클릭 이벤트 핸들러 함수
 	function handleItemClick(event) {
@@ -93,7 +89,6 @@
 			window.location.href = '/user/resume/' + itemId;
 		}
 	}
-
 	// 모든 클릭 가능한 항목에 클릭 이벤트 핸들러 등록
 	const clickableItems = document.querySelectorAll('.clickable');
 	clickableItems.forEach((item) => {
