브랜드 로고 변경 및 플랫폼 이미지 변경

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -63,7 +63,9 @@
 
 				<div class="col-4">
 					<a class="text-center flex-grow-1 fw-bold text-decoration-none text-black" href="/">
-						<h1>플랫폼명</h1>
+						<a href="/">
+							<img src="../../../../../images/goople.png" class="img-thumbnail" alt="구플" width="90px" />
+						</a>
 					</a>
 				</div>
 
@@ -81,7 +83,7 @@
 
 				<div class="m-1">
 					<a href="/">
-						<img src="../../../../../images/brand.png" class="img-thumbnail" alt="브랜드 로고" width="90px" />
+						<img src="../../../../../images/brand.png" class="img-thumbnail" alt="구플 로고" width="90px" />
 					</a>
 				</div>
 
